--- a/lifebooks-frontend/src/App.css
+++ b/lifebooks-frontend/src/App.css
@@ -5,6 +5,8 @@
   box-sizing: border-box;
 }
 
+/* Force deployment refresh - v2.0 */
+
 /* Global Typography and Colors */
 body {
   font-family: "Inter", "Helvetica Neue", sans-serif;
